# aerospike-py-admin-ui

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  compose.dev.yaml  compose.yaml  docker-compose.yml  entrypoint.sh
.github/: dependabot.yml
aerospike/: aerospike.conf  seed-data.sh
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/aerospike_cluster_manager_api/: client_manager.py  config.py  constants.py  converters.py  crypto.py  db.py  dependencies.py  expression_builder.py  info_parser.py  k8s_client.py  logging_config.py  main.py  sample_data_generator.py
backend/src/aerospike_cluster_manager_api/lua_modules/: __init__.py  aggregation.lua  filter_utils.lua
backend/src/aerospike_cluster_manager_api/models/: connection.py  k8s_cluster.py  query.py  record.py  sample_data.py  terminal.py
backend/src/aerospike_cluster_manager_api/routers/: admin_roles.py  admin_users.py  clusters.py  connections.py  indexes.py  k8s_clusters.py  metrics.py  query.py  records.py  sample_data.py  terminal.py  udfs.py
backend/src/aerospike_cluster_manager_api/services/: k8s_service.py
backend/src/aerospike_py_admin_ui_api/: client_manager.py  config.py  constants.py  converters.py  db.py  dependencies.py  info_parser.py  k8s_client.py  logging_config.py  main.py  store.py  utils.py
backend/src/aerospike_py_admin_ui_api/mock_data/: clusters.py  connections.py  indexes.py  metrics.py  records.py  udfs.py  users.py
backend/src/aerospike_py_admin_ui_api/models/: admin.py  cluster.py  connection.py  k8s_cluster.py  query.py  record.py  terminal.py  udf.py
backend/src/aerospike_py_admin_ui_api/routers/: admin_roles.py  admin_users.py  clusters.py  connections.py  indexes.py  k8s_clusters.py  metrics.py  query.py  records.py  terminal.py  udfs.py
backend/src/aerospike_ui_api/: config.py  main.py  store.py
backend/src/aerospike_ui_api/mock_data/: clusters.py  connections.py  indexes.py  metrics.py  records.py  udfs.py  users.py
backend/src/aerospike_ui_api/models/: cluster.py  index.py  query.py  record.py  udf.py
backend/src/aerospike_ui_api/routers/: admin_roles.py  admin_users.py  clusters.py  connections.py  indexes.py  metrics.py  query.py  records.py  terminal.py  udfs.py
backend/tests/: conftest.py  test_connections_router.py  test_converters.py  test_db.py  test_info_parser.py  test_records_router.py
docs/: README.md  architecture.md  (+2 more)
(+291 files in other folders)
