[project]
name = "aerospike-py-admin-ui-api"
version = "0.1.0"
description = "Aerospike Py Admin UI Backend API"
readme = "README.md"
authors = [
    { name = "KimSoungRyoul", email = "KimSoungRyoul@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aerospike-py==0.0.1a6",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["aerospike_py_admin_ui_api"]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.26.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
